[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/images/cracked_concrete_wall_diff_4k.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/word1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/wsline1.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/highlights/defaulthead.tres" type="Theme" id=4]
[ext_resource path="res://scripts/ws1.gd" type="Script" id=5]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 544, 318 )
scale = Vector2( 0.265625, 0.161865 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -296.0
margin_right = 115.0
margin_bottom = 297.0
color = Color( 0, 0, 0, 0.686275 )
script = ExtResource( 5 )

[node name="line_container" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = 34.0
margin_right = 49.0
margin_bottom = -11.0

[node name="wsline1" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_right = 678.0
margin_bottom = 62.0

[node name="wsline2" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 66.0
margin_right = 678.0
margin_bottom = 128.0

[node name="wsline3" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 132.0
margin_right = 678.0
margin_bottom = 194.0

[node name="wsline4" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 198.0
margin_right = 678.0
margin_bottom = 260.0

[node name="wsline5" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 264.0
margin_right = 678.0
margin_bottom = 326.0

[node name="wsline6" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 330.0
margin_right = 678.0
margin_bottom = 392.0

[node name="wsline7" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 396.0
margin_right = 678.0
margin_bottom = 458.0

[node name="wsline8" parent="ColorRect/line_container" instance=ExtResource( 3 )]
margin_top = 462.0
margin_right = 678.0
margin_bottom = 524.0

[node name="Header" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 375.0
margin_top = 13.0
margin_right = 620.0
margin_bottom = 79.0
theme = ExtResource( 4 )
text = "Words"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Header"]
margin_top = 78.0
margin_right = 256.0
margin_bottom = 562.0

[node name="word1" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 256.0
margin_bottom = 38.0

[node name="word2" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 42.0
margin_right = 256.0
margin_bottom = 80.0

[node name="word3" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 84.0
margin_right = 256.0
margin_bottom = 122.0

[node name="word4" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 126.0
margin_right = 256.0
margin_bottom = 164.0

[node name="word5" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 168.0
margin_right = 256.0
margin_bottom = 206.0

[node name="word6" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 210.0
margin_right = 256.0
margin_bottom = 248.0

[node name="word7" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 252.0
margin_right = 256.0
margin_bottom = 290.0

[node name="word8" parent="ColorRect/Header/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 294.0
margin_right = 256.0
margin_bottom = 332.0
